[package]
name = "module-crowdfunding"
version = "1.0.0-dev"
authors = ['zero.io','gamedao.co']
repository = ""
edition = "2018"
license = "GPL-3.0-or-later"
description = "module-crowdfunding"

[package.metadata.substrate]
categories = ["module"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
serde = { version = "1.0.102", optional = true }

sp-runtime = { version = "3.0.0", default-features = false }
sp-std = { version = "3.0.0", default-features = false }
sp-io = { version = "3.0.0", default-features = false }
sp-core = { version = "3.0.0", default-features = false }

frame-support = { version = "3.0.0", default-features = false }
frame-system = { version = "3.0.0", default-features = false }
balances = { package = "pallet-balances", version = "3.0.0", default-features = false }
timestamp = { package = "pallet-timestamp", version = "3.0.0", default-features = false }

primitives = { package = "zero-primitives", default-features = false, path = "../../bin/primitives" }

[features]
default = ['std']
std = [
	'serde/std',
	'codec/std',
	'frame-support/std',
	'frame-system/std',
	'balances/std',
	'timestamp/std',
	'sp-runtime/std',
	'sp-std/std',
	'sp-core/std',
]
