[package]
authors = ['Anonymous']
edition = '2018'
name = 'module-ipfs'
version = "2.0.0"
license = "Unlicense"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME pallet template for defining custom runtime logic."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
frame-support = { default-features = false, path = "../../frame/support" }
frame-system = { default-features = false, path = "../../frame/system" }
sp-core = { default-features = false, path = "../../primitives/core" }
sp-io = { default-features = false, path = "../../primitives/io" }
sp-runtime = { default-features = false, path = "../../primitives/runtime" }
sp-std = { default-features = false, path = "../../primitives/std" }

[features]
default = ['std']
std = [
	'codec/std',
	'frame-support/std',
	'frame-system/std',
	'sp-io/std',
	'sp-std/std',
]
