[package]
name = "subzero-runtime"
version = "0.6.0"
authors = ["zero.io"]
edition = "2018"
build = "build.rs"
license = "Apache-2.0"
homepage = "https://zero.io"
repository = "https://github.com/playzero/subzero/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]

# third-party dependencies

codec = { package = "parity-scale-codec", version = "1.3.6", default-features = false, features = ["derive"] }
serde = { version = "1.0.102", optional = true }
static_assertions = "1.1.0"
hex-literal = { version = "0.3.1", optional = true }

# primitives

sp-authority-discovery = { version = "2.0.1", default-features = false }
sp-consensus-babe = { version = "0.8.1", default-features = false }
sp-block-builder = { version = "2.0.1", default-features = false}
sp-inherents = { version = "2.0.1", default-features = false }
node-primitives = { version = "2.0.1", default-features = false, path = "../../node/subzero/primitives" }
sp-offchain = { version = "2.0.1", default-features = false }
sp-core = { version = "2.0.1", default-features = false }
sp-std = { version = "2.0.1", default-features = false }
sp-api = { version = "2.0.1", default-features = false }
sp-runtime = { version = "2.0.1", default-features = false }
sp-staking = { version = "2.0.1", default-features = false }
sp-keyring = { version = "2.0.1", optional = true }
sp-session = { version = "2.0.1", default-features = false }
sp-transaction-pool = { version = "2.0.1", default-features = false }
sp-version = { version = "2.0.1", default-features = false }

# frame dependencies

frame-executive = { version = "2.0.1", default-features = false }
frame-benchmarking = { version = "2.0.1", default-features = false, optional = true }
frame-support = { version = "2.0.1", default-features = false }
frame-system = { version = "2.0.1", default-features = false }
frame-system-benchmarking = { version = "2.0.1", default-features = false, optional = true }
frame-system-rpc-runtime-api = { version = "2.0.1", default-features = false }
pallet-assets = { version = "2.0.1", default-features = false }
pallet-authority-discovery = { version = "2.0.1", default-features = false }
pallet-authorship = { version = "2.0.1", default-features = false }
pallet-babe = { version = "2.0.1", default-features = false }
pallet-balances = { version = "2.0.1", default-features = false }
pallet-bounties = { version = "2.0.1", default-features = false }
pallet-collective = { version = "2.0.1", default-features = false }
pallet-contracts = { version = "2.0.1", default-features = false }
pallet-contracts-primitives = { version = "2.0.1", default-features = false }
pallet-contracts-rpc-runtime-api = { version = "0.8.1", default-features = false }
pallet-democracy = { version = "2.0.1", default-features = false }
pallet-elections-phragmen = { version = "2.0.1", default-features = false }
pallet-grandpa = { version = "2.0.1", default-features = false }
pallet-im-online = { version = "2.0.1", default-features = false }
pallet-indices = { version = "2.0.1", default-features = false }
pallet-identity = { version = "2.0.1", default-features = false }
pallet-lottery = { version = "2.0.1", default-features = false }
pallet-membership = { version = "2.0.1", default-features = false }
pallet-mmr = { version = "2.0.1", default-features = false }
pallet-multisig = { version = "2.0.1", default-features = false }
pallet-offences = { version = "2.0.1", default-features = false }
pallet-offences-benchmarking = { version = "2.0.1", default-features = false, optional = true }
pallet-proxy = { version = "2.0.1", default-features = false }
pallet-randomness-collective-flip = { version = "2.0.1", default-features = false }
pallet-recovery = { version = "2.0.1", default-features = false }
pallet-session = { version = "2.0.1", features = ["historical"], default-features = false }
pallet-session-benchmarking = { version = "2.0.1", default-features = false, optional = true }
pallet-staking = { version = "2.0.1", default-features = false }
pallet-staking-reward-curve = { version = "2.0.1", default-features = false }
pallet-scheduler = { version = "2.0.1", default-features = false }
pallet-society = { version = "2.0.1", default-features = false }
pallet-sudo = { version = "2.0.1", default-features = false }
pallet-timestamp = { version = "2.0.1", default-features = false }
pallet-tips = { version = "2.0.1", default-features = false }
pallet-treasury = { version = "2.0.1", default-features = false }
pallet-utility = { version = "2.0.1", default-features = false }
pallet-transaction-payment = { version = "2.0.1", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "2.0.1", default-features = false }
pallet-vesting = { version = "2.0.1", default-features = false }

# vendors

# orml-auction = { path = "../../../vendors/orml/auction", default-features = false }
# orml-authority = { path = "../../../vendors/orml/authority", default-features = false }
# orml-benchmarking = { path = "../../../vendors/orml/benchmarking", default-features = false, optional = true }
# orml-currencies = { path = "../../../vendors/orml/currencies", default-features = false }
# orml-oracle = { path = "../../../vendors/orml/oracle", default-features = false }
# orml-oracle-rpc-runtime-api = { path = "../../../vendors/orml/oracle/rpc/runtime-api", default-features = false }
# orml-gradually-update = { path = "../../../vendors/orml/gradually-update", default-features = false }
# orml-vesting = { path = "../../../vendors/orml/vesting", default-features = false }
# orml-rewards = { path = "../../../vendors/orml/rewards", default-features = false }
# orml-tokens = { path = "../../../vendors/orml/tokens", default-features = false }
# orml-traits = { path = "../../../vendors/orml/traits", default-features = false }
orml-nft= { path = "../../vendors/orml/nft", default-features = false }

# modules

module-nft = { path = "../../modules/nft", default-features = false }

[build-dependencies]
substrate-wasm-builder = { version = "3.0.0", path = "../../utils/wasm-builder" }

[dev-dependencies]
sp-io = { version = "2.0.1" }

[features]
default = ["std"]
with-tracing = [ "frame-executive/with-tracing" ]
std = [
	"codec/std",
	"serde",

	"frame-benchmarking/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system/std",
	"frame-system-rpc-runtime-api/std",

	"sp-authority-discovery/std",
	"sp-block-builder/std",
	"sp-consensus-babe/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-core/std",
	"sp-std/std",
	"sp-api/std",
	"sp-runtime/std",
	"sp-staking/std",
	"sp-keyring",
	"sp-session/std",
	"sp-transaction-pool/std",
	"sp-version/std",

	"pallet-assets/std",
	"pallet-authority-discovery/std",
	"pallet-authorship/std",
	"pallet-babe/std",
	"pallet-balances/std",
	"pallet-bounties/std",
	"pallet-collective/std",
	"pallet-contracts/std",
	"pallet-contracts-primitives/std",
	"pallet-contracts-rpc-runtime-api/std",
	"pallet-democracy/std",
	"pallet-elections-phragmen/std",
	"pallet-grandpa/std",
	"pallet-im-online/std",
	"pallet-indices/std",
	"pallet-lottery/std",
	"pallet-membership/std",
	"pallet-mmr/std",
	"pallet-multisig/std",
	"pallet-identity/std",
	"pallet-scheduler/std",
	"pallet-offences/std",
	"pallet-proxy/std",
	"pallet-randomness-collective-flip/std",
	"pallet-session/std",
	"pallet-staking/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-tips/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-treasury/std",
	"pallet-utility/std",
	"pallet-society/std",
	"pallet-recovery/std",
	"pallet-vesting/std",

	"node-primitives/std",

	# "orml-auction/std",
	# "orml-authority/std",
	# "orml-benchmarking/std",
	# "orml-currencies/std",
	# "orml-oracle-rpc-runtime-api/std",
	# "orml-oracle/std",
	# "orml-gradually-update/std",
	# "orml-tokens/std",
	# "orml-traits/std",
	# "orml-vesting/std",
	# "orml-rewards/std",

	"orml-nft/std",
	"module-nft/std",

]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"pallet-assets/runtime-benchmarks",
	"pallet-babe/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-bounties/runtime-benchmarks",
	"pallet-collective/runtime-benchmarks",
	"pallet-contracts/runtime-benchmarks",
	"pallet-democracy/runtime-benchmarks",
	"pallet-elections-phragmen/runtime-benchmarks",
	"pallet-grandpa/runtime-benchmarks",
	"pallet-identity/runtime-benchmarks",
	"pallet-im-online/runtime-benchmarks",
	"pallet-indices/runtime-benchmarks",
	"pallet-lottery/runtime-benchmarks",
	"pallet-mmr/runtime-benchmarks",
	"pallet-multisig/runtime-benchmarks",
	"pallet-proxy/runtime-benchmarks",
	"pallet-scheduler/runtime-benchmarks",
	"pallet-society/runtime-benchmarks",
	"pallet-staking/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-tips/runtime-benchmarks",
	"pallet-treasury/runtime-benchmarks",
	"pallet-utility/runtime-benchmarks",
	"pallet-vesting/runtime-benchmarks",
	"pallet-offences-benchmarking",
	"pallet-session-benchmarking",
	"frame-system-benchmarking",
	"hex-literal",
]
