[package]
name = "substrate-test-runtime-client"
version = "2.0.1"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sc-light = { version = "2.0.1"}
sp-consensus = { version = "0.8.1"}
sc-block-builder = { version = "0.8.1"}
substrate-test-client = { version = "2.0.1", path = "../../client" }
sp-core = { version = "2.0.1"}
substrate-test-runtime = { version = "2.0.1", path = "../../runtime" }
sp-runtime = { version = "2.0.1"}
sp-api = { version = "2.0.1"}
sp-blockchain = { version = "2.0.1"}
codec = { package = "parity-scale-codec", version = "1.3.6" }
sc-client-api = { version = "2.0.1"}
sc-consensus = { version = "0.8.1"}
sc-service = { version = "0.8.1", default-features = false}
futures = "0.3.9"
