[package]
name = "frame-benchmarking-cli"
version = "2.0.1"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "CLI for benchmarking FRAME"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
frame-benchmarking = { version = "2.0.1" }
sp-core = { version = "2.0.1" }
sc-service = { version = "0.8.1", default-features = false }
sc-cli = { version = "0.8.1" }
sc-client-db = { version = "0.8.1" }
sc-executor = { version = "0.8.1" }
sp-externalities = { version = "0.8.1" }
sp-keystore = { version = "0.8.1" }
sp-runtime = { version = "2.0.1" }
sp-state-machine = { version = "0.8.1" }
codec = { version = "1.3.1", package = "parity-scale-codec" }
structopt = "0.3.8"
chrono = "0.4"
serde = "1.0.116"
handlebars = "3.5.0"
Inflector = "0.11.4"

[features]
default = ["db"]
db = ["sc-client-db/with-kvdb-rocksdb", "sc-client-db/with-parity-db"]
