[package]
name = "substrate-frame-cli"
version = "2.0.1"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "cli interface for FRAME"
documentation = "https://docs.rs/substrate-frame-cli"
readme = "README.md"

[dependencies]
sp-core = { version = "2.0.1"}
sc-cli = { version = "0.8.1"}
sp-runtime = { version = "2.0.1"}
structopt = "0.3.8"
frame-system = { version = "2.0.1"}

[dev-dependencies]

[features]
default = []
