[package]
name = "substrate-frame-rpc-system"
version = "2.0.1"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME's system exposed over Substrate RPC"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sc-client-api = { version = "2.0.1"}
codec = { package = "parity-scale-codec", version = "1.3.6" }
futures = { version = "0.3.4", features = ["compat"] }
jsonrpc-core = "15.1.0"
jsonrpc-core-client = "15.1.0"
jsonrpc-derive = "15.1.0"
log = "0.4.8"
serde = { version = "1.0.101", features = ["derive"] }
sp-runtime = { version = "2.0.1"}
sp-api = { version = "2.0.1"}
frame-system-rpc-runtime-api = { version = "2.0.1"}
sp-core = { version = "2.0.1"}
sp-blockchain = { version = "2.0.1"}
sp-transaction-pool = { version = "2.0.1"}
sp-block-builder = { version = "2.0.1"}
sc-rpc-api = { version = "0.8.1"}

[dev-dependencies]
substrate-test-runtime-client = { version = "2.0.1", path = "../../../../test-utils/runtime/client" }
sp-tracing = { version = "2.0.1"}
sc-transaction-pool = { version = "2.0.1"}
