[package]
name = "try-runtime-cli"
version = "0.9.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "Cli command runtime testing and dry-running"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log = "0.4.8"
parity-scale-codec = { version = "2.0.0" }

sc-service = { version = "0.9.0", default-features = false }
sc-cli = { version = "0.9.0" }
sc-executor = {  }
sc-client-api = { version = "3.0.0" }
structopt = "0.3.8"
sp-state-machine = { version = "0.9.0" }
sp-api = { version = "3.0.0" }
sp-blockchain = { version = "3.0.0" }
sp-runtime = { version = "3.0.0" }
sp-externalities = { version = "0.9.0" }
sp-core = { version = "3.0.0" }
frame-try-runtime = { version = "0.9.0" }

remote-externalities = {  }
